fixed hero bg opacity on mobile

--- a/style.css
+++ b/style.css
@@ -490,7 +490,7 @@
         background-position: center;
         animation: bg 15s infinite ease-in;
         margin-bottom: 50px;
-        background-color: rgb(22, 22, 22);
+        background-color: #000000be;
         background-size: cover;
         width: 100vw;
         background-blend-mode: overlay;
